fixed line height and spacing

--- a/stylesheets/demo1.css
+++ b/stylesheets/demo1.css
@@ -79,18 +79,18 @@ h2 {
   font-size: 25px;
   font-weight: 600;
   margin-top: 0;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .bigcard .cardnumber {
   border: 3px solid white;
   margin-top: 5px;
   font-size: 35px;
-  line-height: 40px;
+  line-height: 35px;
 }
 
 .bigcard .cardnumber span {
-  font-weight: 900;
+  font-weight: 700;
   margin-right: 20px;
   margin-left: 20px;
 }
